force-app/main/default/objects/Advisor__c/Advisor__c.object-meta.xml
<CustomObject>
    <description>Holds information about an advisor&apos;s interests, region of expertise.  Links from letters, endorsements and advisor terms.</description>
    <label>Advisor</label>
    <nameField>
        <label>Advisor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>