force-app/main/default/objects/Advisor__c/fields/Accessibility_needs__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_needs__c</fullName>
    <description>Notes related to advisors&apos; accessibility needs in order to support access to information and accommodations/considerations required for participation.</description>
    <inlineHelpText>Notes related to advisors&apos; accessibility needs in order to support access to information and accommodations/considerations required for participation.</inlineHelpText>
    <label>Accessibility needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>