force-app/main/default/objects/Advisor__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account, either household or organization, containing mailing information for this advisor</description>
    <inlineHelpText>The account, either household or organization, containing mailing information for this advisor</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Advisors</relationshipLabel>
    <relationshipName>Advisors</relationshipName>
    <type>Lookup</type>
</CustomField>