force-app/main/default/objects/Advisor__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, then it&apos;s okay to send endorsement requests to this advisor.</description>
    <inlineHelpText>If checked, then it&apos;s okay to send endorsement requests to this advisor.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>