force-app/main/default/objects/Advisor__c/fields/Advisor_Id_CaseSafe__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Id_CaseSafe__c</fullName>
    <description>CaseSafe (18-char) version of this advisor record&apos;s Id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CaseSafe (18-char) version of this advisor record&apos;s Id</inlineHelpText>
    <label>Advisor Id CaseSafe</label>
    <type>Text</type>
</CustomField>