force-app/main/default/objects/Advisor__c/fields/Advisor_number__c.field-meta.xml
<CustomField>
    <fullName>Advisor_number__c</fullName>
    <description>Auto-generated number for advisor records</description>
    <displayFormat>Adv{0000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Auto-generated number for advisor records</inlineHelpText>
    <label>Advisor number</label>
    <type>AutoNumber</type>
</CustomField>