force-app/main/default/objects/Advisor__c/fields/AMT__c.field-meta.xml
<CustomField>
    <fullName>AMT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advisor expertise aligned with GFW thematic priority of advocacy, media and technology (self-selected)</description>
    <inlineHelpText>Advisor expertise aligned with GFW thematic priority of advocacy, media and technology (self-selected)</inlineHelpText>
    <label>AMT</label>
    <type>Checkbox</type>
</CustomField>