force-app/main/default/objects/Advisor__c/fields/Bio__c.field-meta.xml
<CustomField>
    <fullName>Bio__c</fullName>
    <description>Biographical description</description>
    <inlineHelpText>Biographical description</inlineHelpText>
    <label>Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>