force-app/main/default/objects/Advisor__c/fields/BoardMemberCurrent__c.field-meta.xml
<CustomField>
    <fullName>BoardMemberCurrent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if is current board member</description>
    <inlineHelpText>Checked if is current board member</inlineHelpText>
    <label>BoardMemberCurrent</label>
    <type>Checkbox</type>
</CustomField>