force-app/main/default/objects/Advisor__c/fields/BoardMemberFormer__c.field-meta.xml
<CustomField>
    <fullName>BoardMemberFormer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if is former board member</description>
    <inlineHelpText>Checked if is former board member</inlineHelpText>
    <label>BoardMemberFormer</label>
    <type>Checkbox</type>
</CustomField>