force-app/main/default/objects/Advisor__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>Possible classifications for the advisor: activist, academic, peer org, government, donor,...</description>
    <inlineHelpText>Possible classifications for the advisor: activist, academic, peer org, government, donor,...</inlineHelpText>
    <label>Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activist</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Peer org.</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>