force-app/main/default/objects/Advisor__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments regarding this advisor</description>
    <inlineHelpText>Comments regarding this advisor</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>