force-app/main/default/objects/Advisor__c/fields/Community_contact__c.field-meta.xml
<CustomField>
    <fullName>Community_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The community member contact record used by this advisor to login</description>
    <inlineHelpText>The community member contact record used by this advisor to login</inlineHelpText>
    <label>Community contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advisors (Community contact)</relationshipLabel>
    <relationshipName>Advisors1</relationshipName>
    <type>Lookup</type>
</CustomField>