force-app/main/default/objects/Advisor__c/fields/Community_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Community_contact_email__c</fullName>
    <description>Email of the linked community contact record</description>
    <formula>Community_contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email of the linked community contact record</inlineHelpText>
    <label>Community contact email</label>
    <type>Text</type>
</CustomField>