force-app/main/default/objects/Advisor__c/fields/Community_contact_username__c.field-meta.xml
<CustomField>
    <fullName>Community_contact_username__c</fullName>
    <description>Username of the linked community contact record</description>
    <inlineHelpText>Username of the linked community contact record</inlineHelpText>
    <label>Community contact username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>