force-app/main/default/objects/Advisor__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact record with contact information for this advisor</description>
    <inlineHelpText>The contact record with contact information for this advisor</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Advisors</relationshipLabel>
    <relationshipName>Advisors</relationshipName>
    <type>Lookup</type>
</CustomField>