force-app/main/default/objects/Advisor__c/fields/Contact_emails__c.field-meta.xml
<CustomField>
    <fullName>Contact_emails__c</fullName>
    <description>Email(s) from the linked contact record</description>
    <formula>Contact__r.Email &amp; 
IF(NOT(ISBLANK(Contact__r.Email2__c)), &quot;,&quot; &amp; Contact__r.Email2__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email(s) from the linked contact record</inlineHelpText>
    <label>Contact emails</label>
    <type>Text</type>
</CustomField>