force-app/main/default/objects/Advisor__c/fields/Country_1__c.field-meta.xml
<CustomField>
    <fullName>Country_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary country of expertise</description>
    <inlineHelpText>Primary country of expertise</inlineHelpText>
    <label>Country 1</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Advisors</relationshipLabel>
    <relationshipName>Advisors</relationshipName>
    <type>Lookup</type>
</CustomField>