force-app/main/default/objects/Advisor__c/fields/Country_2__c.field-meta.xml
<CustomField>
    <fullName>Country_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second country of expertise</description>
    <inlineHelpText>Second country of expertise</inlineHelpText>
    <label>Country 2</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Advisors (Country 2)</relationshipLabel>
    <relationshipName>Advisors1</relationshipName>
    <type>Lookup</type>
</CustomField>