force-app/main/default/objects/Advisor__c/fields/Country_3__c.field-meta.xml
<CustomField>
    <fullName>Country_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Third country of expertise</description>
    <inlineHelpText>Third country of expertise</inlineHelpText>
    <label>Country 3</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Advisors (Country 3)</relationshipLabel>
    <relationshipName>Advisors2</relationshipName>
    <type>Lookup</type>
</CustomField>