force-app/main/default/objects/Advisor__c/fields/Current_assessor_term_type__c.field-meta.xml
<CustomField>
    <fullName>Current_assessor_term_type__c</fullName>
    <description>The type of the current assessor term (if any)</description>
    <formula>TEXT(Current_assessor_term__r.Type__c)</formula>
    <inlineHelpText>The type of the current assessor term (if any)</inlineHelpText>
    <label>Current assessor term type</label>
    <type>Text</type>
</CustomField>