force-app/main/default/objects/Advisor__c/fields/Current_endorser_term__c.field-meta.xml
<CustomField>
    <fullName>Current_assessor_term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The currently active assessor term (if any) linked to this advisor record</description>
    <inlineHelpText>The currently active assessor term (if any) linked to this advisor record</inlineHelpText>
    <label>Current assessor term</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The recent advisor term must belong to this advisor</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Advisor_Term__c.Advisor__c</valueField>
        </filterItems>
        <infoMessage>The recent advisor term must belong to this advisor</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Advisor_Term__c</referenceTo>
    <relationshipLabel>Advisors</relationshipLabel>
    <relationshipName>Advisors</relationshipName>
    <type>Lookup</type>
</CustomField>