force-app/main/default/objects/Advisor__c/fields/Current_endorser_term_type__c.field-meta.xml
<CustomField>
    <fullName>Current_endorser_term_type__c</fullName>
    <description>The type of the current endorser term (if any)</description>
    <formula>TEXT(Current_endorser_term__r.Type__c)</formula>
    <inlineHelpText>The type of the current endorser term (if any)</inlineHelpText>
    <label>Current endorser term type</label>
    <type>Text</type>
</CustomField>