force-app/main/default/objects/Advisor__c/fields/CV_on_file__c.field-meta.xml
<CustomField>
    <fullName>CV_on_file__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if we have the advisor&apos;s CV on file - important for official advisors</description>
    <inlineHelpText>Checked if we have the advisor&apos;s CV on file - important for official advisors</inlineHelpText>
    <label>CV on file</label>
    <type>Checkbox</type>
</CustomField>