force-app/main/default/objects/Advisor__c/fields/Date_committment_letter_received__c.field-meta.xml
<CustomField>
    <fullName>Date_committment_letter_received__c</fullName>
    <description>Date received for the letter from the advisor committing to be an official GFW advisor</description>
    <inlineHelpText>Date received for the letter from the advisor committing to be an official GFW advisor</inlineHelpText>
    <label>Date committment letter received</label>
    <type>Date</type>
</CustomField>