force-app/main/default/objects/Advisor__c/fields/EE__c.field-meta.xml
<CustomField>
    <fullName>EE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advisor expertise aligned with GFW thematic priority of economic empowerment (self-selected)</description>
    <inlineHelpText>Advisor expertise aligned with GFW thematic priority of economic empowerment (self-selected)</inlineHelpText>
    <label>EE</label>
    <type>Checkbox</type>
</CustomField>