force-app/main/default/objects/Advisor__c/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <description>Old email address(es) from Filemaker. Do not use. Emails should be entered in the linked contact record (for indivs) or at the Org level (for &quot;Org advisors&quot;).</description>
    <inlineHelpText>Old email address(es) from Filemaker. Do not use. Emails should be entered in the linked contact record (for indivs) or at the Org level (for &quot;Org advisors&quot;).</inlineHelpText>
    <label>Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>