force-app/main/default/objects/Advisor__c/fields/FS_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Group__c</fullName>
    <description>FS Group to which Owner belongs.</description>
    <formula>TEXT(Owner:User.FS_Group_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FS Group to which Owner belongs.</inlineHelpText>
    <label>FS Group</label>
    <type>Text</type>
</CustomField>