force-app/main/default/objects/Advisor__c/fields/FV__c.field-meta.xml
<CustomField>
    <fullName>FV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advisor expertise aligned with GFW thematic priority of freedom from violence (self-selected)</description>
    <inlineHelpText>Advisor expertise aligned with GFW thematic priority of freedom from violence (self-selected)</inlineHelpText>
    <label>FV</label>
    <type>Checkbox</type>
</CustomField>