force-app/main/default/objects/Advisor__c/fields/Global__c.field-meta.xml
<CustomField>
    <fullName>Global__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this advisor has global expertise/interests</description>
    <inlineHelpText>Checked if this advisor has global expertise/interests</inlineHelpText>
    <label>Global</label>
    <type>Checkbox</type>
</CustomField>