force-app/main/default/objects/Advisor__c/fields/GM_org_affiliation__c.field-meta.xml
<CustomField>
    <fullName>GM_org_affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The GM organization (if any) with which this advisor is affiliated (employee, consultant, board member, etc.)</description>
    <inlineHelpText>The GM organization (if any) with which this advisor is affiliated (employee, consultant, board member, etc.)</inlineHelpText>
    <label>GM org affiliation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Affiliated advisors</relationshipLabel>
    <relationshipName>Advisors1</relationshipName>
    <type>Lookup</type>
</CustomField>