force-app/main/default/objects/Advisor__c/fields/GM_org_affiliation_name__c.field-meta.xml
<CustomField>
    <fullName>GM_org_affiliation_name__c</fullName>
    <description>The name of the GM org affiliation account, if any</description>
    <formula>GM_org_affiliation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the GM org affiliation account, if any</inlineHelpText>
    <label>GM org affiliation name</label>
    <type>Text</type>
</CustomField>