force-app/main/default/objects/Advisor__c/fields/Grantee__c.field-meta.xml
<CustomField>
    <fullName>Grantee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if is current or former grantee</description>
    <inlineHelpText>Checked if is current or former grantee</inlineHelpText>
    <label>Grantee</label>
    <type>Checkbox</type>
</CustomField>