force-app/main/default/objects/Advisor__c/fields/In_online_advisor_community__c.field-meta.xml
<CustomField>
    <fullName>In_online_advisor_community__c</fullName>
    <description>Checked if this advisor is a member of the online Advisor community</description>
    <formula>NOT(ISBLANK( Community_contact__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this advisor is a member of the online Advisor community</inlineHelpText>
    <label>In online advisor community</label>
    <type>Checkbox</type>
</CustomField>