force-app/main/default/objects/Advisor__c/fields/InterestArea1__c.field-meta.xml
<CustomField>
    <fullName>InterestArea1__c</fullName>
    <description>Top-ranked interest area</description>
    <inlineHelpText>Top-ranked interest area</inlineHelpText>
    <label>InterestArea1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>