force-app/main/default/objects/Advisor__c/fields/InterestArea2__c.field-meta.xml
<CustomField>
    <fullName>InterestArea2__c</fullName>
    <description>Second-ranked interest area</description>
    <inlineHelpText>Second-ranked interest area</inlineHelpText>
    <label>InterestArea2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>