force-app/main/default/objects/Advisor__c/fields/InterestArea3__c.field-meta.xml
<CustomField>
    <fullName>InterestArea3__c</fullName>
    <description>Third-ranked interest area</description>
    <inlineHelpText>Third-ranked interest area</inlineHelpText>
    <label>InterestArea3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>