force-app/main/default/objects/Advisor__c/fields/Keep_confidential__c.field-meta.xml
<CustomField>
    <fullName>Keep_confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if we need to keep the advisors name/info private</description>
    <inlineHelpText>Checked if we need to keep the advisors name/info private</inlineHelpText>
    <label>Keep confidential</label>
    <type>Checkbox</type>
</CustomField>