force-app/main/default/objects/Advisor__c/fields/Num_assessments_rec_d_last_5_years__c.field-meta.xml
<CustomField>
    <fullName>Num_assessments_rec_d_last_5_years__c</fullName>
    <description>The number of assessments received from this advisor among those requested over the last 5 fiscal years</description>
    <inlineHelpText>The number of assessments received from this advisor among those requested over the last 5 fiscal years</inlineHelpText>
    <label>Num assessments rec&apos;d last 5 years</label>
    <summaryFilterItems>
        <field>Assessment__c.Years_since_date_received__c</field>
        <operation>lessOrEqual</operation>
        <value>5</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment__c.Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>