force-app/main/default/objects/Advisor__c/fields/Num_assessments_received__c.field-meta.xml
<CustomField>
    <fullName>Num_assessments_received__c</fullName>
    <description>The number of assessments received from this advisor</description>
    <inlineHelpText>The number of assessments received from this advisor</inlineHelpText>
    <label>Num assessments received</label>
    <summaryFilterItems>
        <field>Assessment__c.Date_received__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment__c.Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>