force-app/main/default/objects/Advisor__c/fields/Num_assessments_req_d_since_2007__c.field-meta.xml
<CustomField>
    <fullName>Num_assessments_req_d_since_2007__c</fullName>
    <description>The number of assessments requested from this advisor since 7/1/2007</description>
    <inlineHelpText>The number of assessments requested from this advisor since 7/1/2007</inlineHelpText>
    <label>Num assessments req&apos;d since 2007</label>
    <summaryFilterItems>
        <field>Assessment__c.Date_requested_or_endReq_created__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2007</value>
    </summaryFilterItems>
    <summaryForeignKey>Assessment__c.Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>