force-app/main/default/objects/Advisor__c/fields/Num_assessments_requested__c.field-meta.xml
<CustomField>
    <fullName>Num_assessments_requested__c</fullName>
    <description>Total number of assessments requested from this advisor</description>
    <inlineHelpText>Total number of assessments requested from this advisor</inlineHelpText>
    <label>Num assessments requested</label>
    <summaryForeignKey>Assessment__c.Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>