force-app/main/default/objects/Advisor__c/fields/Num_endorsements_rec_d_since_2007__c.field-meta.xml
<CustomField>
    <fullName>Num_endorsements_rec_d_since_2007__c</fullName>
    <description>The number of endorsements received from this advisor among those requested since 7/1/2007</description>
    <inlineHelpText>The number of endorsements received from this advisor among those requested since 7/1/2007</inlineHelpText>
    <label>Num endorsements rec&apos;d since 2007</label>
    <summaryFilterItems>
        <field>Endorsement__c.Date_received__c</field>
        <operation>greaterOrEqual</operation>
        <value>7/1/2007</value>
    </summaryFilterItems>
    <summaryForeignKey>Endorsement__c.Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>