force-app/main/default/objects/Advisor__c/fields/Num_endorsements_received__c.field-meta.xml
<CustomField>
    <fullName>Num_endorsements_received__c</fullName>
    <description>The number of endorsements received from this advisor</description>
    <inlineHelpText>The number of endorsements received from this advisor</inlineHelpText>
    <label>Num endorsements received</label>
    <summaryFilterItems>
        <field>Endorsement__c.Date_received__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Endorsement__c.Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>