force-app/main/default/objects/Advisor__c/fields/Num_endorsements_requested__c.field-meta.xml
<CustomField>
    <fullName>Num_endorsements_requested__c</fullName>
    <description>Total number of endorsements requested from this advisor</description>
    <inlineHelpText>Total number of endorsements requested from this advisor</inlineHelpText>
    <label>Num endorsements requested</label>
    <summaryForeignKey>Endorsement__c.Advisor__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>