force-app/main/default/objects/Advisor__c/fields/PE__c.field-meta.xml
<CustomField>
    <fullName>PE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Advisor expertise aligned with GFW thematic priority of political and civic empowerment (self-selected)</description>
    <inlineHelpText>Advisor expertise aligned with GFW thematic priority of political and civic empowerment (self-selected)</inlineHelpText>
    <label>PE</label>
    <type>Checkbox</type>
</CustomField>