force-app/main/default/objects/Advisor__c/fields/Primary_country_name__c.field-meta.xml
<CustomField>
    <fullName>Primary_country_name__c</fullName>
    <description>Name of first country (Country 1) listed</description>
    <formula>Country_1__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of first country (Country 1) listed</inlineHelpText>
    <label>Primary country name</label>
    <type>Text</type>
</CustomField>