force-app/main/default/objects/Advisor__c/fields/Region_1__c.field-meta.xml
<CustomField>
    <fullName>Region_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary region of expertise</description>
    <inlineHelpText>Primary region of expertise</inlineHelpText>
    <label>Region 1</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Advisors</relationshipLabel>
    <relationshipName>Advisors</relationshipName>
    <type>Lookup</type>
</CustomField>