force-app/main/default/objects/Advisor__c/fields/Region_2__c.field-meta.xml
<CustomField>
    <fullName>Region_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second region of expertise</description>
    <inlineHelpText>Second region of expertise</inlineHelpText>
    <label>Region 2</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Advisors (Region 2)</relationshipLabel>
    <relationshipName>Advisors1</relationshipName>
    <type>Lookup</type>
</CustomField>