force-app/main/default/objects/Advisor__c/fields/Region_3__c.field-meta.xml
<CustomField>
    <fullName>Region_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Third region of expertise</description>
    <inlineHelpText>Third region of expertise</inlineHelpText>
    <label>Region 3</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Advisors (Region 3)</relationshipLabel>
    <relationshipName>Advisors2</relationshipName>
    <type>Lookup</type>
</CustomField>