force-app/main/default/objects/Advisor__c/fields/Response_rate_last_5_years__c.field-meta.xml
<CustomField>
    <fullName>Response_rate_last_5_years__c</fullName>
    <description>The fraction of endorsements requested over the last 5 fiscal years that have been received</description>
    <formula>IF(Num_endorsements_req_d_last_5_years__c = 0, null,
 Num_endorsements_rec_d_last_5_years__c / Num_endorsements_req_d_last_5_years__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The fraction of endorsements requested over the last 5 fiscal years that have been received</inlineHelpText>
    <label>Response rate last 5 years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>